--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -247,7 +247,7 @@ private class RollupCalculatorTests {
     RollupState outerState = new RollupState();
     RollupState.SObjectInfo info = new RollupState.SObjectInfo();
     info.setItem(new Opportunity(Name = 'a', Amount = 3));
-    outerState.setState(lookupKey, info);
+    outerState.setState(lookupKey, metadata, info);
     calc.setState(outerState);
 
     calc.performRollup(
@@ -725,16 +725,17 @@ private class RollupCalculatorTests {
     Account acc = [SELECT Id FROM Account];
     Integer priorVal = 50;
     RollupState.MostInfo info = new RollupState.MostInfo();
-    info.setLargestPointCounter(2);
+    info.setValues(2, priorVal);
     RollupState outerState = new RollupState();
-    outerState.setState(acc.Id, info);
+    Rollup__mdt metaKey = new Rollup__mdt();
+    outerState.setState(acc.Id, metaKey, info);
 
     RollupCalculator calc = getCalculator(
       priorVal,
       Rollup.Op.MOST,
       ContactPointAddress.PreferenceRank,
       Account.AnnualRevenue,
-      new Rollup__mdt(),
+      metaKey,
       acc.Id,
       ContactPointAddress.ParentId
     );
@@ -884,6 +885,50 @@ private class RollupCalculatorTests {
     calc.performRollup(new List<Opportunity>{ opp }, oldOppMap);
 
     System.assertEquals(null, calc.getReturnValue());
+  }
+
+  @IsTest
+  static void correctlyAppliesStatefulSums() {
+    Rollup__mdt metaKey = new Rollup__mdt();
+    String accountKey = '0011g00003VDGbF002';
+    Integer value = 1;
+    RollupCalculator calc = getCalculator(null, Rollup.Op.SUM, Opportunity.Amount, Account.AnnualRevenue, metaKey, accountKey, Opportunity.AccountId);
+    RollupState.GenericInfo info = new RollupState.GenericInfo();
+    info.value = value;
+    RollupState outerState = new RollupState();
+    outerState.setState(accountKey, metaKey, info);
+    calc.setState(outerState);
+
+    Opportunity one = new Opportunity(Id = '0066g00003VDGbF001', Amount = 5, AccountId = accountKey);
+    Opportunity two = new Opportunity(Id = '0066g00003VDGbF002', Amount = 5, AccountId = accountKey);
+
+    calc.performRollup(new List<Opportunity>{ one, two }, new Map<Id, SObject>());
+
+    System.assertEquals(one.Amount + two.Amount + value, calc.getReturnValue());
+    System.assertEquals(one.Amount + two.Amount + value, info.value);
+  }
+
+  @IsTest
+  static void doesNotResetParentValueWhenOnlyStatefulSumMatches() {
+    Rollup__mdt metaKey = new Rollup__mdt();
+    String accountKey = '0011g00003VDGbF002';
+    Integer value = 1;
+    RollupCalculator calc = getCalculator(null, Rollup.Op.SUM, Opportunity.Amount, Account.AnnualRevenue, metaKey, accountKey, Opportunity.AccountId);
+    RollupState.GenericInfo info = new RollupState.GenericInfo();
+    info.value = value;
+    RollupState outerState = new RollupState();
+    outerState.setState(accountKey, metaKey, info);
+    calc.setState(outerState);
+    calc.setFullRecalc(true);
+    calc.setEvaluator(new RollupEvaluator.WhereFieldEvaluator('Amount = 0', Opportunity.SObjectType));
+
+    Opportunity one = new Opportunity(Id = '0066g00003VDGbF001', Amount = 5, AccountId = accountKey);
+    Opportunity two = new Opportunity(Id = '0066g00003VDGbF002', Amount = 5, AccountId = accountKey);
+
+    calc.performRollup(new List<Opportunity>{ one, two }, new Map<Id, SObject>());
+
+    System.assertEquals(value, calc.getReturnValue());
+    System.assertEquals(value, info.value);
   }
 
   // CONCAT tests
@@ -2177,6 +2222,7 @@ private class RollupCalculatorTests {
 
   @IsTest
   static void averageFactorsInBatchState() {
+    Rollup__mdt meta = new Rollup__mdt();
     String lookupKey = RollupTestUtils.createId(Account.SObjectType);
     RollupState.AverageInfo state = new RollupState.AverageInfo();
     state.denominator = 15;
@@ -2186,13 +2232,13 @@ private class RollupCalculatorTests {
       Rollup.Op.AVERAGE,
       Opportunity.Amount,
       Account.Description,
-      new Rollup__mdt(),
+      meta,
       lookupKey,
       Account.Id
     );
 
     RollupState outerState = new RollupState();
-    outerState.setState(lookupKey, state);
+    outerState.setState(lookupKey, meta, state);
     calc.setState(outerState);
     calc.performRollup(
       new List<SObject>{
